--- a/css/main.css
+++ b/css/main.css
@@ -1,18 +1,79 @@
+body, h1, h2, h3, h4, h5, h6,
+p, blockquote, pre, hr,
+dl, dd, ol, ul, figure {
+	margin: 0;
+	padding: 0;
+}
 /* Main Nav Styles */
+header {
+	margin-top: 20px;
+	width: 100%;
+	height: 50px;
+	background-color: transparent;
+	margin-bottom: 20px;
+	position: fixed;
+	
+}
+
+h1 {
+	color: white;
+}
+
+p{
+	color: white;
+}
+
+.logo{
+	display: inline;
+	float: left;
+	font-weight: 700;
+	color: white;
+	padding-left: 200px;
+	text-align: right;
+	
+}
+
+nav{
+	float: right;
+	width: 550px;
+}
+
+nav ul {
+	list-style: none;
+	text-transform: uppercase;
+}
 
 li {
-  list-style: none;
-  text-transform: uppercase;
   display: inline;
   margin-right: 20px;
 }
 
+li a {
+	color: white;
+	}
+
 a {
   text-decoration: none;
+}
+
+a:hover{
+	text-decoration: underline;
 }
 
 .buy-now {
   border: 1px solid black;
   border-radius: 20px;
   padding: 7px;
+  border-color: white;
 }
+
+.splash{
+	text-align: center;
+	background-color: #ccb081;
+	height: 800px;
+	width: auto;
+}
+/*
+.splash h1 {
+	margin-top: 100px;
+}*/
