--- a/css/main.css
+++ b/css/main.css
@@ -1,41 +1,42 @@
+/* Global Styles */
+
 body, h1, h2, h3, h4, h5, h6,
 p, blockquote, pre, hr,
 dl, dd, ol, ul, figure {
 	margin: 0;
 	padding: 0;
 }
+
+h1, h2, h3, h4, h5, h6,
+p, li {
+	color: #fff;
+  font-family: sans-serif;
+}
+
+
 /* Main Nav Styles */
+
 header {
-	margin-top: 20px;
+	margin-top: 30px;
 	width: 100%;
 	height: 50px;
 	background-color: transparent;
 	margin-bottom: 20px;
 	position: fixed;
-	
 }
 
-h1 {
-	color: white;
-}
-
-p{
-	color: white;
-}
-
-.logo{
+.logo {
 	display: inline;
 	float: left;
-	font-weight: 700;
-	color: white;
-	padding-left: 200px;
+  font-weight: 100;
+	margin-left: 15%;
 	text-align: right;
-	
 }
 
-nav{
+nav {
 	float: right;
-	width: 550px;
+	width: auto;
+  margin-right: 10%;
 }
 
 nav ul {
@@ -50,7 +51,7 @@ li {
 
 li a {
 	color: white;
-	}
+}
 
 a {
   text-decoration: none;
@@ -67,13 +68,16 @@ a:hover{
   border-color: white;
 }
 
-.splash{
+/* Splash Section Styles */
+
+.splash {
 	text-align: center;
 	background-color: #ccb081;
-	height: 800px;
+	height: 100vh;
 	width: auto;
 }
-/*
+
 .splash h1 {
-	margin-top: 100px;
-}*/
+  font-size: 3em;
+	padding-top: 200px;
+}
