add scroll feature -- works in Firefox

--- a/css/main.css
+++ b/css/main.css
@@ -5,12 +5,17 @@ p, blockquote, pre, hr,
 dl, dd, ol, ul, figure {
 	margin: 0;
 	padding: 0;
+	
 }
 
 h1, h2, h3, h4, h5, h6,
 p, li{
 	color: #fff;
 	font-family: sans-serif;
+}
+
+body{
+	scroll-behavior: smooth;
 }
 
 /* Main Nav Styles */
