--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ p, blockquote, pre, hr,
 dl, dd, ol, ul, figure {
 	margin: 0;
 	padding: 0;
-	
+
 }
 
 h1, h2, h3, h4, h5, h6,
@@ -76,7 +76,7 @@ a:hover{
 
 .splash {
 	text-align: center;
-	
+
 	height: 100vh;
 	width: auto;
 	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#a18872+0,c8af99+100 */
@@ -111,16 +111,16 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a18872', end
 
 .transparent {
 	text-align: center;
-	
 	height: 100vh;
 	width: auto;
+	background: url('../assets/images/blur.png') no-repeat center bottom;
+	background-size: cover;
 	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#e9e9e9+0,f6f6f6+100 */
-background: #e9e9e9; /* Old browsers */
-background: -moz-linear-gradient(top,  #e9e9e9 0%, #f6f6f6 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top,  #e9e9e9 0%,#f6f6f6 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom,  #e9e9e9 0%,#f6f6f6 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+/* background: #e9e9e9; /* Old browsers */
+/* background: -moz-linear-gradient(top,  #e9e9e9 0%, #f6f6f6 100%); /* FF3.6-15 */
+/* background: -webkit-linear-gradient(top,  #e9e9e9 0%,#f6f6f6 100%); /* Chrome10-25,Safari5.1-6 */
+/* background: linear-gradient(to bottom,  #e9e9e9 0%,#f6f6f6 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e9e9e9', endColorstr='#f6f6f6',GradientType=0 ); /* IE6-9 */
-
 }
 
 .transparent h1 {
@@ -128,7 +128,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e9e9e9', end
 	padding-top: 75px;
 	font-weight: 100;
 	color: #898989;
-	
+
 }
 
 .transparent p {
@@ -140,14 +140,15 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e9e9e9', end
 }
 
 .transparent img {
-	width: 50%;
+	margin-top: 3em;
+	width: 65%;
 	height: auto;
 }
 
 
 /*Nutrition Section Styles*/
 .nutrition {
-	
+
 	height: 100vh;
 	width: auto;
 	text-align: center;
@@ -172,14 +173,14 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6c8e5c', end
 
 .nutrition img {
 	width: 30%;
-	
+
 }
 
 /* Customer Service Background Section Styles */
 
 .customer {
 	text-align: center;
-	
+
 	height: 100vh;
 	width: auto;
 background-image: url("assets/images/potatoconbg.png");
@@ -191,7 +192,7 @@ background-image: url("assets/images/potatoconbg.png");
 	padding-top: 75px;
 	font-weight: 100;
 	color: #898989;
-	
+
 }
 
 .customer p {
@@ -206,7 +207,7 @@ background-image: url("assets/images/potatoconbg.png");
 
 /* Tranform Section Styles*/
 .transform {
-	
+
 	height: 100vh;
 	width: auto;
 	text-align: center;
@@ -241,7 +242,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ebdaaf', end
 
 .buy {
 	text-align: center;
-	
+
 	height: 100vh;
 	width: auto;
 	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ececec+0,f5f5f5+100 */
@@ -275,7 +276,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ececec', end
 	width: 60%;
 	margin: 0 auto;
 }
-			
+
 .buy div div  {
 	width: 30%;
 	float: left;
@@ -283,12 +284,12 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ececec', end
 	margin-left:20px;
 	margin-top: 100px;
 }
-			
+
 div{
 	border-right: 1px solid #898989;
-	
+
 }
-			
+
 div:last-of-type{
 	border-right:none;
 }
@@ -297,7 +298,7 @@ div:last-of-type{
 	padding-left: 15px;
 	height: 95px;
 }
-				
+
 .buy div div ul li  {
 	color: #898989;
 	padding-bottom: 20px;
