--- a/css/main.css
+++ b/css/main.css
@@ -148,16 +148,16 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e9e9e9', end
 
 /*Nutrition Section Styles*/
 .nutrition {
-
-	height: 100vh;
-	width: auto;
-	text-align: center;
-	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#6c8e5c+0,77a066+100 */
-background: #6c8e5c; /* Old browsers */
-background: -moz-linear-gradient(top,  #6c8e5c 0%, #77a066 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top,  #6c8e5c 0%,#77a066 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom,  #6c8e5c 0%,#77a066 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6c8e5c', endColorstr='#77a066',GradientType=0 ); /* IE6-9 */
+   background: url('../assets/images/blur2.png') no-repeat center bottom;
+    height: 100vh;
+    width: auto;
+    text-align: center;
+    background-size: 100%;
+    background-color: #6c8e5c;
+    background: -moz-linear-gradient(top, #6c8e5c 0%, #77a066 100%);
+    /* background: -webkit-linear-gradient(top, #6c8e5c 0%,#77a066 100%); */
+    /* background: linear-gradient(to bottom, #6c8e5c 0%,#77a066 100%); */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6c8e5c', endColorstr='#77a066',GradientType=0 );
 
 
 }
@@ -214,19 +214,17 @@ background-image: url("assets/images/potatoconbg.png");
 
 /* Tranform Section Styles*/
 .transform {
-
-	height: 100vh;
-	width: auto;
-	text-align: center;
-	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ebdaaf+0,e9d29e+100 */
-background: #ebdaaf; /* Old browsers */
-background: -moz-linear-gradient(top,  #ebdaaf 0%, #e9d29e 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top,  #ebdaaf 0%,#e9d29e 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom,  #ebdaaf 0%,#e9d29e 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ebdaaf', endColorstr='#e9d29e',GradientType=0 ); /* IE6-9 */
-
-}
-
+background: url('../assets/images/mashed.png') no-repeat left bottom, url('../assets/images/fried.png') no-repeat right bottom;
+    height: 100vh;
+    width: auto;
+    background-size: 25%;
+    text-align: center;
+    background-color: #ebdaaf;
+    background: -moz-linear-gradient(top, #ebdaaf 0%, #e9d29e 100%);
+    /* background: -webkit-linear-gradient(top, #ebdaaf 0%,#e9d29e 100%); */
+    /* background: linear-gradient(to bottom, #ebdaaf 0%,#e9d29e 100%); */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ebdaaf', endColorstr='#e9d29e',GradientType=0 );}
+    
 .transform h1 {
     font-size: 3em;
 	padding-top: 75px;
