--- a/css/main.css
+++ b/css/main.css
@@ -187,10 +187,11 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e9e9e9', end
 
 .customer {
 	text-align: center;
-
 	height: 100vh;
 	width: auto;
-background-image: url("assets/images/potatoconbg.png");
+background-image: url("../assets/images/potatoconbg.png");
+background-size: 100%;
+
 
 }
 
