--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ dl, dd, ol, ul, figure {
 h1, h2, h3, h4, h5, h6,
 p, li{
 	color: #fff;
-	font-family: sans-serif;
+	font-family: 'Source Sans Pro', sans-serif;
 }
 
 body{
@@ -183,7 +183,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e9e9e9', end
 }
 
 .nutrition .background-image{
-	
+
 	width: 100%;
 }
 
@@ -230,7 +230,7 @@ background: url('../assets/images/mashed.png') no-repeat left bottom, url('../as
     /* background: -webkit-linear-gradient(top, #ebdaaf 0%,#e9d29e 100%); */
     /* background: linear-gradient(to bottom, #ebdaaf 0%,#e9d29e 100%); */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ebdaaf', endColorstr='#e9d29e',GradientType=0 );}
-    
+
 .transform h1 {
     font-size: 3em;
 	padding-top: 75px;
@@ -249,13 +249,13 @@ background: url('../assets/images/mashed.png') no-repeat left bottom, url('../as
 }
 
 .transform .mashed-potato{
-	float: left; 
+	float: left;
 	width: 25%;
-	
+
 }
 
 .transform .fried-potato{
-	float: right; 
+	float: right;
 	width: 25%;
 }
 
