--- a/css/main.css
+++ b/css/main.css
@@ -148,6 +148,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e9e9e9', end
 	height: auto;
 }
 
+#potatoline img {
+	width: 100%
+}
+
 
 /*Nutrition Section Styles*/
 .nutrition {
