--- a/css/main.css
+++ b/css/main.css
@@ -148,7 +148,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e9e9e9', end
 	height: auto;
 }
 
-#potatoline img {
+#potatoline {
 	width: 100%
 }
 
