--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ dl, dd, ol, ul, figure {
 h1, h2, h3, h4, h5, h6,
 p, li{
 	color: #fff;
-	font-family: sans-serif;
+	font-family: 'Source Sans Pro', sans-serif;
 }
 
 body{
@@ -148,6 +148,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e9e9e9', end
 	height: auto;
 }
 
+#potatoline {
+	width: 100%
+}
+
 
 /*Nutrition Section Styles*/
 .nutrition {
@@ -183,7 +187,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e9e9e9', end
 }
 
 .nutrition .background-image{
-	
+
 	width: 100%;
 }
 
@@ -230,7 +234,7 @@ background: url('../assets/images/mashed.png') no-repeat left bottom, url('../as
     /* background: -webkit-linear-gradient(top, #ebdaaf 0%,#e9d29e 100%); */
     /* background: linear-gradient(to bottom, #ebdaaf 0%,#e9d29e 100%); */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ebdaaf', endColorstr='#e9d29e',GradientType=0 );}
-    
+
 .transform h1 {
     font-size: 3em;
 	padding-top: 75px;
@@ -249,13 +253,13 @@ background: url('../assets/images/mashed.png') no-repeat left bottom, url('../as
 }
 
 .transform .mashed-potato{
-	float: left; 
+	float: left;
 	width: 25%;
-	
+
 }
 
 .transform .fried-potato{
-	float: right; 
+	float: right;
 	width: 25%;
 }
 
@@ -361,6 +365,31 @@ div:last-of-type{
 	padding-top: 5%;
 }
 
-.footer {
-	background-color: #ffffff;
+
+/* Footer Section Styles */
+
+footer {
+	background-color: #fff;
+	width: 100%;
+	bottom: 0;
+	display: flex;
+	justify-content: space-around;
+	margin: 2em 0;
+}
+
+footer p, footer li a {
+	color: #898989;
+	font-weight: lighter;
+	font-size: .7em;
+	line-height: 1.75em;
+}
+
+.footer-nav {
+	list-style: none;
+	text-transform: uppercase;
+}
+
+.footer-nav li {
+	display: inline;
+	margin-right: 10px;
 }
