--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ dl, dd, ol, ul, figure {
 }
 
 h1, h2, h3, h4, h5, h6,
-p, li, a {
+p, li, a, blockquote {
 	color: #fff;
 	font-family: 'Source Sans Pro', sans-serif;
 }
@@ -197,28 +197,37 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e9e9e9', end
 	text-align: center;
 	height: 100vh;
 	width: auto;
-background-image: url("../assets/images/potatoconbg.png");
-background-size: 100%;
-
-
+	background-image: url("../assets/images/potatoconbg.png");
+	background-size: 100%;
 }
 
 .customer h1 {
-    font-size: 3em;
+	color: #909090;
+  font-size: 3em;
 	padding-top: 75px;
 	font-weight: 100;
-	color: #898989;
-
 }
 
-.customer p {
-	color: #898989;
-	padding-top: 1.5em;
+#testimonial-slides {
+	display: flex;
+	margin: 15em auto;
+	text-align: center;
 }
 
-.customer p span {
-	font-weight: 700;
+#testimonial-slides blockquote {
+	color: #909090;
+	font-size: 1.5em;
+	font-weight: 300;
 }
+
+#testimonial-slides blockquote:before {
+	background-image: url('../assets/images/focusleft.png');
+}
+
+#testimonial-slides blockquote:after {
+	background-image: url('../assets/images/focusright.png');
+}
+
 
 
 
@@ -370,7 +379,6 @@ div:last-of-type{
 .buy .potato-team {
 	padding-top: 5%;
 }
-
 
 /* Footer Section Styles */
 
