--- a/css/main.css
+++ b/css/main.css
@@ -21,12 +21,15 @@ body {
 /* Main Nav Styles */
 
 header {
-	margin-top: 30px;
+	padding-top: 30px;
 	width: 100%;
 	height: 50px;
-	background-color: transparent;
-	margin-bottom: 20px;
+	
+	padding-bottom: 10px;
 	position: fixed;
+	background-color: #a68d77;
+	opacity: .9;
+	z-index: 1000;
 }
 
 .logo {
@@ -35,12 +38,16 @@ header {
 	font-weight: 100;
 	margin-left: 15%;
 	text-align: right;
+	
 }
 
 nav {
 	float: right;
 	width: auto;
 	margin-right: 10%;
+	margin-top: 10px;
+	
+	
 }
 
 nav ul {
