--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ dl, dd, ol, ul, figure {
 }
 
 h1, h2, h3, h4, h5, h6,
-p, li, a, blockquote {
+p, li, a {
 	color: #fff;
 	font-family: 'Source Sans Pro', sans-serif;
 }
@@ -206,6 +206,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e9e9e9', end
 	width: auto;
 	background-image: url("../assets/images/potatoconbg.png");
 	background-size: 100%;
+	
 }
 
 .customer h1 {
@@ -215,33 +216,107 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e9e9e9', end
 	font-weight: 100;
 }
 
-.testimonial-slides {
-	display: flex;
-	margin: 15em auto;
-	text-align: center;
+
+.customer .slides {
+  display: flex;
+  margin: 0;
+  min-height: 75vh;
+  overflow: hidden;
+  text-align: center;
+  width: 4000px;
+
 }
 
-.testimonial-slides blockquote {
-	    color: #909090;
-    font-size: 1.5em;
-    font-weight: 300;
-    width: 68%;
-    /* align-content: center; */
-    text-align: center;
-    /* align-items: center; */
-    margin: 0 auto;
+.customer blockquote {
+  font-weight: 300;
+  font-size: 1.5em;
+  margin: 3em auto;
+  max-width: 25em;
+  position: relative;
+    color: #333333;
 }
 
-.testimonial-slides blockquote::before {
-
-	background-image: url("../assets/images/focusleft.png");
+.customer blockquote footer {
+  font-size: .7em;
+  margin: 2em 0;
+  padding: 2em 0;
+  position: relative;
+  justify-content: center;
 }
 
-.testimonial-slides blockquote::after {
-	background-image: url("../assets/images/focusright.png");
+/* =========== Down arrow ========== */
+
+.customer blockquote footer:before {
+    border-right: 1px solid #909090;
+    border-bottom: 1px solid #909090;
+    content: '';
+    height: 15px;
+    left: 290px;
+    position: absolute;
+    top: 3px;
+    transform: rotate(45deg);
+    width: 15px; 
 }
 
+.customer blockquote footer:after {
+	border-top: 1px solid #909090;
+    /* border-bottom: 1px solid #909090; */
+    content: '';
+    height: 15px;
+    left: 309px;
+    position: absolute;
+    top: 10px;
+    /* transform: rotate(45deg); */
+    width: 150px;
+}} 
 
+/* =========== Arrow lines ========== */
+
+.customer blockquote footer span {
+  font-weight: 700;
+  position: relative;
+  display: block;
+}
+
+.customer span:before
+             {
+   border-bottom: 1px solid #909090;
+    content: '';
+    position: absolute;
+   top: 10px;
+    width: 150px; 
+        left: 117px;   
+  
+}
+.customer span:before {
+   /*left: 100%;*/
+    margin-left: 20px;
+}
+/* =========== Previous & next slide arrows ========== */
+
+.customer
+  blockquote:before,
+  blockquote:after {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    content: '';
+    display: block;
+    height: 50px;
+    position: absolute;
+    top: 15px;
+    width: 50px;
+}
+
+.customer blockquote:before {
+  background-image: url("../assets/images/focusleft.png");
+  right: 110%;
+}
+
+.customer blockquote:after {
+  background-image: url("../assets/images/focusright.png");
+  left: 110%;
+}
 
 
 /* Tranform Section Styles*/
