--- a/css/main.css
+++ b/css/main.css
@@ -219,7 +219,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e9e9e9', end
 
 .customer .slides {
   display: flex;
-  margin: 0;
+  margin-top: 7%;
   min-height: 75vh;
   overflow: hidden;
   text-align: center;
@@ -256,6 +256,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e9e9e9', end
     top: 3px;
     transform: rotate(45deg);
     width: 15px; 
+    /*left: calc(50% - 15px);*/
 }
 
 .customer blockquote footer:after {
@@ -267,7 +268,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e9e9e9', end
     position: absolute;
     top: 10px;
     /* transform: rotate(45deg); */
-    width: 150px;
+    width: 40%;
 }} 
 
 /* =========== Arrow lines ========== */
@@ -284,8 +285,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e9e9e9', end
     content: '';
     position: absolute;
    top: 10px;
-    width: 150px; 
-        left: 117px;   
+    width: 40%;
+    left: 28px;
   
 }
 .customer span:before {
